test/sema/no-matching-initializer-generic.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo<T> {
    init() { }
    init(a: T, b: T) { }
}

func main() {
    // CHECK: [[@LINE+6]]:9: error: no matching initializer for 'Foo' with argument list of type '(int)'
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: init() { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: init(a: T, b: T) { }
    // CHECK-NOT: note
    _ = Foo(42)
}
